language/move-lang/tests/move_check/typing/declare_wrong_type.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/declare_wrong_type.move:6:13
  │
6 │         let S { g } : R;
  │             ^^^^^^^   - Expected: '0x8675309::M::R'
  │             │          
  │             Invalid deconstruction binding
  │             Given: '0x8675309::M::S'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/declare_wrong_type.move:7:14
  │
7 │         let (S { g }, R { f }): (R, R);
  │              ^^^^^^^             - Expected: '0x8675309::M::R'
  │              │                    
  │              Invalid deconstruction binding
  │              Given: '0x8675309::M::S'

